--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_svg: ^0.17.4 # SVGS
   animations: ^1.1.0 #Animations
+  flutter_svg: ^1.1.5 #SVG
 
 dev_dependencies:
   flutter_test:
